--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,95 +8,80 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
   line-height: 1.6;
+  font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   color: #333;
-}
-
-/* Header Styling */
-.siteheader {
-  color: black;
-  text-align: left;
-  padding: 20px;
-}
-
-.siteheader h1 {
-  font-size: 2rem;
 }
 
 /* Emoji Section */
 .emojis {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  grid-template-rows: repeat(2, auto); 
-  gap: 20px; 
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 20px;
+  max-width: 900px;
 }
 
 /* Emoji Card */
 .emoji {
-  display: flex; 
-  flex-direction: column; 
-  justify-content: space-between; 
-  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* background: white; */
   border: 1px solid #9e9e9e;
-  border-radius: 8px;
+  border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
-  height: 290px; 
+  height: 290px;
 }
 
-.emoji:hover {
-  transform: translateY(-5px);
+/* Heading 2 */
+.emoji h2 {
+  order: 2;
+  border-bottom: 2px solid #bbb;
+  margin: 0.5rem 0;
 }
 
 /* Emoji Icon */
 .icon {
-  font-size: 3rem; 
+  font-size: 3rem;
   text-align: center;
 }
-.horizontal-line{
-  height: 2px;
-  background-color: #cccccc;
+
+/* link */
+.emoji a {
+  height: 40px;
+  line-height: 40px;
+  width: 100%;
   border: none;
-}
-
-a {
-  height: 40px; 
-  line-height: 40px; 
-  width: 100%; 
-  border: none; 
-  background-color: #7837aa; 
-  color: white !important; 
+  background-color: #7837aa;
+  color: white !important;
   border-radius: 6px;
   font-size: large;
   font-weight: lighter !important;
+  order: 4;
+  text-decoration: none;
+  font-size: medium;
 }
 
-
-/* Content Section */
-.content {
-  flex-grow: 1; 
+/* Paragraph */
+.emoji p {
+  flex-grow: 1;
+  grid-template-columns: repeat(2, 1fr);
+  order: 3;
+  gap: 1.3 rem;
+  font-size: small;
 }
 
-/* Links */
-a {
-  display: flex; 
-  align-items: center; 
-  height: 40px; 
-  line-height: 40px; 
-  width: 100%; 
-  border: none; 
-  background-color: #7837aa; 
-  color: white !important; 
-  border-radius: 6px;
-  font-size: large;
-  font-weight: lighter !important;
-  margin-top: auto; 
-  text-decoration: none; 
+/* Header Styling */
+/* .siteheader {
+  text-align: left;
+  padding: 20px;
+  color: black;
 }
 
-a:hover {
-  text-decoration: underline;
-}
+.siteheader h1 {
+  font-size: 2rem;
+} */
